assessment_systems/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: assessment
  labels:
    name: assessment
    environment: production
    managed-by: terraform
